<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background" >

    <TextView
        android:id="@+id/tvPersonalInfo"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/personalinfo"
        android:gravity="center"
        android:textSize="32sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/tvAge"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tvPersonalInfo"
        android:layout_marginTop="10dp"
        android:textSize="18sp"
        android:text="@string/age" />
    <TextView
        android:id="@+id/tvHeight"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tvAge"
        style="@style/piStyle"
        android:text="@string/height" />
    <TextView
        android:id="@+id/tvWeight"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tvHeight"
        style="@style/piStyle"
        android:text="@string/weight" />
    <TextView
        android:id="@+id/tvGender"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tvWeight"
        style="@style/piStyle"
        android:text="@string/gender" />

    <EditText
        android:id="@+id/etAge"
        android:layout_width="wrap_content"
        android:width="250dp"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/tvAge"
        android:layout_alignParentRight="true"
        android:ems="10"
        android:inputType="text">
        <requestFocus />
    </EditText>

    <EditText
        android:id="@+id/etHeightFeet"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:width="50dp"
        android:layout_alignBaseline="@+id/tvHeight"
        android:layout_alignBottom="@+id/tvHeight"
        android:layout_alignLeft="@+id/etAge"
        android:ems="10"
        android:inputType="number" />

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_alignTop="@+id/tvWeight"
        android:text="@string/pds" />

    <EditText
        android:id="@+id/etWeight"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/tvWeight"
        android:layout_alignBottom="@+id/tvWeight"
        android:layout_alignLeft="@+id/etHeightFeet"
        android:layout_toLeftOf="@+id/textView1"
        android:ems="10"
        android:inputType="number"
        android:width="250dp" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/etHeightFeet"
        android:layout_marginLeft="14dp"
        android:layout_toRightOf="@+id/etHeightFeet"
        android:text="@string/ft" />

    <EditText
        android:id="@+id/etHeightInches"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/etHeightFeet"
        android:layout_alignBottom="@+id/etHeightFeet"
        android:layout_marginLeft="24dp"
        android:layout_toRightOf="@+id/textView2"
        android:ems="10"
        android:inputType="number"
        android:width="50dp" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/etHeightInches"
        android:layout_alignBottom="@+id/etHeightInches"
        android:layout_marginLeft="16dp"
        android:layout_toRightOf="@+id/etHeightInches"
        android:text="@string/in" />

    <TextView
        android:id="@+id/tvBMI"
        style="@style/piStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/btnCalculateBMIandBMR"
        android:layout_marginTop="17dp"
        android:text="@string/bmi" />
    
    <TextView
        android:id="@+id/tvBMR"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tvBMI"
        style="@style/piStyle"
        android:layout_marginTop="25dp"
        android:text="@string/bmr" />

    <TextView
        android:id="@+id/tvDisplayBMR"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/tvBMR"
        android:layout_alignBottom="@+id/tvBMR"
        android:layout_toRightOf="@+id/tvWeight" />

    <TextView
        android:id="@+id/tvDisplayBMI"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/tvBMI"
        android:layout_alignBottom="@+id/tvBMI"
        android:layout_toRightOf="@+id/tvGender" />

    <Button
        android:id="@+id/btnSendInfo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:text="@string/sendinfo" />

    <RadioGroup
        android:id="@+id/radioGender"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/tvGender"
        android:layout_alignLeft="@+id/etWeight"
        android:orientation="horizontal" >
    
        <RadioButton
	        android:id="@+id/radioMale"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:checked="true"
	        android:text="@string/male" />

    	<RadioButton
	        android:id="@+id/radioFemale"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:text="@string/female" />
        
    </RadioGroup>

    <Button
        android:id="@+id/btnCalculateBMIandBMR"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tvGender"
        android:layout_marginTop="54dp"
        android:layout_toRightOf="@+id/tvHeight"
        android:text="@string/calculatebmiandbmr" />

    <TextView
        android:id="@+id/tvWorkoutType"
        style="@style/piStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/tvGender"
        android:layout_marginTop="19dp"
        android:text="@string/typeofworkout" />

    <Spinner
        android:id="@+id/spinnerWorkoutType"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tvGender"
        android:layout_toRightOf="@+id/textView2"
        android:layout_marginTop="10dp"
        android:ems="10" />
    
</RelativeLayout>
